# Pathological-Speech-Recognition

./: .gitignore  0718.py  README.md  pyproject.toml  quick_start.py
.github/workflows/: ci.yml
configs/: config.yaml  conformer.yaml
demo/: streamlit_demo.py
scripts/: generate_synthetic_dataset.py  train.py
src/pathological_speech_recognition/: __init__.py
src/pathological_speech_recognition/data/: augmentation.py
src/pathological_speech_recognition/metrics/: __init__.py
src/pathological_speech_recognition/models/: __init__.py  base.py  conformer.py  wav2vec2.py
src/pathological_speech_recognition/utils/: __init__.py
tests/: test_pathological_speech_recognition.py
